--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
-李颢
-
-Hao LI, Assoc. Prof., SJTU
+<!DOCTYPE html>
+<html>
+<head>
+<title>李(LI)颢(Hao)</title>
+</head>
+<body>
+<h1>李颢</h1>
+<h1>Hao LI, Assoc. Prof., SJTU</h1>
+<p>Automation<br/>Intelligent System<br/>Control Theory<br/>Computer Vision</p>
+</body>
+</html>
