Excerpt of FARET Chapters 1+2

--- a/index.html
+++ b/index.html
@@ -7,5 +7,9 @@
 <h1>李颢</h1>
 <h1>Hao LI, Assoc. Prof., SJTU</h1>
 <p>Automation<br/>Intelligent System<br/>Control Theory<br/>Computer Vision</p>
+<h1>Books</h1>
+	<h2>Fundamentals and Applications of Recursive Estimation Theory</h2>
+		<h3><a href="https://li-hao-sjtu.github.io/LiH/Excerpts/FARET_Excerpt_Chapter1_Chapter2.pdf">
+				Excerpt of Chapter 1 and Chapter 2</a></h3>
 </body>
 </html>
