--- a/Excerpts/index.html
+++ b/Excerpts/index.html
@@ -1,1 +1,11 @@
-For books excerpts
+<!DOCTYPE html>
+<html>
+<head>
+<title>For books excerpts</title>
+</head>
+<body>
+<h2>Fundamentals and Applications of Recursive Estimation Theory</h2>
+	<h3><a href="https://li-hao-sjtu.github.io/LiH/Excerpts/FARET_Excerpt_Chapter1_Chapter2.pdf">
+		Excerpt of Chapter 1 and Chapter 2</a></h3>
+</body>
+</html>
