--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 <h1>李颢</h1>
 <h1>Hao LI, Assoc. Prof., SJTU</h1>
 <p>Automation<br/>Intelligent System<br/>Control Theory<br/>Computer Vision</p>
+<h1>Courses</h1>
+	<h2>Automation and System Control (ASC)</h2>
+	<h2>Intelligent System (IS)</h2>
+	<h2>Computer Vision (CV)</h2>
+	<h2>Data Structures (DS)</h2>
 <h1>Books</h1>
 	<h2>Fundamentals and Applications of Recursive Estimation Theory</h2>
 		<h3><a href="https://li-hao-sjtu.github.io/LiH/Excerpts/FARET_Excerpt_Chapter1_Chapter2.pdf">
