--- a/index.html
+++ b/index.html
@@ -7,14 +7,21 @@
 <h1>李颢</h1>
 <h1>Hao LI, Assoc. Prof., SJTU</h1>
 <p>Automation<br/>Intelligent System<br/>Control Theory<br/>Computer Vision</p>
+<br/>
 <h1>Courses</h1>
 	<h2>Automation and System Control (ASC)</h2>
 	<h2>Intelligent System (IS)</h2>
 	<h2>Computer Vision (CV)</h2>
 	<h2>Data Structures (DS)</h2>
+<br/>
 <h1>Books</h1>
 	<h2>Fundamentals and Applications of Recursive Estimation Theory</h2>
 		<h3><a href="https://li-hao-sjtu.github.io/LiH/Excerpts/FARET_Excerpt_Chapter1_Chapter2.pdf">
-				Excerpt of Chapter 1 and Chapter 2</a></h3>
+			Excerpt of Chapter 1 and Chapter 2</a></h3>
+<br/>
+<h1>Misc</h1>
+	<h3><a href="https://cn.chinadaily.com.cn/a/201909/30/WS5d91676fa31099ab995e3365.html?ivk_sa=1023197a">
+		延安礼赞 Tribute to Yan-An</a> @ China Daily</h3>
+		<a href="https://img3.chinadaily.com.cn/images/201910/05/5d97d4c5a31099ab43d279a4.png">《延安礼赞》Lyrics</a>
 </body>
 </html>
