--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 	<h2>Fundamentals and Applications of Recursive Estimation Theory</h2>
 		<h3><a href="https://li-hao-sjtu.github.io/LiH/Excerpts/FARET_Excerpt_Chapter1_Chapter2.pdf">
 			Excerpt of Chapter 1 and Chapter 2</a></h3>
+	<h2>Control Theory for Practical Applications</h2>
 <br/>
 <h1>Misc</h1>
 	<h3><a href="https://cn.chinadaily.com.cn/a/201909/30/WS5d91676fa31099ab995e3365.html?ivk_sa=1023197a">
