--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
 			Excerpt of Chapter 1 and Chapter 2</a></h3>
 	<h2>Control Theory for Practical Applications</h2>
 <br/>
+<h1>Papers</h1>
+	<h2><a href="https://scholar.google.com/citations?user=W-oMHHwAAAAJ&hl=zh-CN&oi=sra">List</a> in Google Scholar</h2>
+<br/>
 <h1>Misc</h1>
 	<h3><a href="https://cn.chinadaily.com.cn/a/201909/30/WS5d91676fa31099ab995e3365.html?ivk_sa=1023197a">
 		延安礼赞 Tribute to Yan-An</a> @ China Daily</h3>
