--- a/index.html
+++ b/index.html
@@ -28,5 +28,6 @@
 		延安礼赞 Tribute to Yan-An</a> @ China Daily</h3>
 		<a href="https://img3.chinadaily.com.cn/images/201910/05/5d97d4c5a31099ab43d279a4.png">《延安礼赞》Lyrics</a>
 	<h3>Finger-styple performance  <a href="https://li-hao-sjtu.github.io/LiH/Misc/%E5%8F%8C%E6%97%A6%E6%99%9A%E4%BC%9A%E3%80%8A%E5%A4%9C%E7%A9%BA%E4%B8%AD%E6%9C%80%E4%BA%AE%E7%9A%84%E6%98%9F%E3%80%8B.mp4">《夜空中最亮的星》</a> @ 双旦晚会</h3>
+	<h3>Guitar performance in chorus <a href="https://li-hao-sjtu.github.io/LiH/Misc/%E5%90%88%E5%94%B1%E3%80%8A%E5%A4%A7%E6%B5%B7%E5%95%8A%E6%95%85%E4%B9%A1%E3%80%8B.mp4">《大海啊故乡》</a> @  经典传唱</h3>
 </body>
 </html>
