--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <h1>李颢</h1>
-<h1>Hao LI, Assoc. Prof., SJTU</h1>
+<h1>Hao LI, Assoc. Prof., Doctoral Supervisor, SJTU</h1>
 <p>Automation<br/>Intelligent System<br/>Control Theory<br/>Computer Vision</p>
 <br/>
 <h1>Courses</h1>
