--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <title>李(LI)颢(Hao)</title>
 </head>
 <body>
+<h1><font color="red">!!THIS HOMEPAGE IS DEPRECATED!!</font></h1>
 <h1>李颢</h1>
 <h1>Hao LI, Assoc. Prof., Doctoral Supervisor, SJTU</h1>
 <p>Automation<br/>Intelligent System<br/>Control Theory<br/>Computer Vision</p>
